hello-world-completed

--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,2 +1,10 @@
-$color-white: #ffffff;
-$color-black: #000000;
+:root {
+    --clr-white: #ffffff;
+    --clr-black: #000000;
+    --clr-btn: #2F584E;
+    --clr-yellow: #F7BE2C;
+    --clr-heading-blk: #151515;
+    --clr-nav-txt: #838383;
+    --clr-hero-txt: #2D3134;
+    --clr-footer-bg: #FF9257;
+}
