--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,11 +1,4 @@
-// @font-face {
-//   font-family: "MyWebFont";
-//   src: url("pathofyourfont.woff2") format("woff2"),
-//     url("pathofyourfont.woff") format("woff");
-//   font-style: normal;
-//   font-weight: normal;
-//   font-display: swap;
-// }
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -13,16 +6,14 @@ html {
 
 html,
 body {
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Nunito', sans-serif;
   font-size: 16px;
   font-weight: $font-regular;
   line-height: 1.3;
   width: 100%;
   min-height: 100%;
-  color: $color-black;
-  background-color: $color-white;
+  color: var(--clr-black);
+  background-color: var(--clr-white);
 }
 
 a,
